--- a/type-pret.html
+++ b/type-pret.html
@@ -234,7 +234,7 @@
     const taux_assurance = document.getElementById("taux_assurance").value || 0;
 
     if (!libelle || !taux) {
-      alert("Veuillez remplir tous les champs");
+      alert("Veuillez remplir au minimum le libellé et le taux");
       return;
     }
 
