--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
     table { border-collapse: collapse; width: 100%; margin-top: 20px; }
     th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
     th { background-color: #f2f2f2; }
+    nav { margin-bottom: 20px; }
+    nav a { margin-right: 10px; }
   </style>
 </head>
 <body>
+
+  <nav>
+    <a href="pret.html">Gestion des prêts</a> |
+    <a href="status_pret.html">Gestion des statuts de prêt</a>
+  </nav>
 
   <h1>Gestion des étudiants</h1>
 
