--- a/pret.html
+++ b/pret.html
@@ -59,8 +59,23 @@
       xhr.open(method, apiBase + url, true);
       xhr.setRequestHeader("Content-Type", "application/x-www-form-urlencoded");
       xhr.onreadystatechange = () => {
-        if (xhr.readyState === 4 && xhr.status === 200) {
-          callback(JSON.parse(xhr.responseText));
+        if (xhr.readyState === 4) {
+          let response = {};
+          try {
+            response = JSON.parse(xhr.responseText);
+          } catch (e) {
+            alert("Erreur serveur.");
+            return;
+          }
+          if (xhr.status >= 200 && xhr.status < 300) {
+            if (response && response.error) {
+              alert("Erreur : " + response.error);
+            } else {
+              callback(response);
+            }
+          } else {
+            alert("Erreur : " + (response.error || xhr.statusText));
+          }
         }
       };
       xhr.send(data);
