--- a/pret.html
+++ b/pret.html
@@ -24,8 +24,8 @@
 
   <div>
     <input type="hidden" id="id">
-    <input type="number" id="duree_remboursement" placeholder="Durée remboursement (mois)">
-    <input type="number" id="montant" placeholder="Montant" step="0.01">
+    <input min="0" type="number" id="duree_remboursement" placeholder="Durée remboursement (mois)">
+    <input min="0" type="number" id="montant" placeholder="Montant" step="0.01">
     <input type="date" id="date_demande" placeholder="Date de demande">
     <select id="modalite_id">
       <option value="">Sélectionnez une modalité</option>
