--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <button class="nav-btn" id="goto-fond">Aller à la gestion des fonds</button>
   <nav>
     <a href="pret.html">Gestion des prêts</a> |
-    <a href="status_pret.html">Gestion des statuts de prêt</a>
+    <a href="status_pret.html">Gestion des statuts de prêt</a> |
+    <a href="dashboard-interets.html" style="color: #e74c3c; font-weight: bold;">📊 Dashboard Intérêts</a>
   </nav>
 
   <h1>Gestion des étudiants</h1>
